--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.20.0",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.15",
